--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -117,4 +117,23 @@
         app:layout_constraintTop_toTopOf="@+id/rectangle_10"
         app:layout_constraintVertical_bias="0.027" />
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="242dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="51dp"
+        tools:layout_editor_absoluteY="319dp">
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onCheck"
+        android:text="sumbit"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_10"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_10"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_10"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_10" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
