--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -21,6 +21,20 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
+        android:id="@+id/rectangle_15"
+        android:layout_width="198dp"
+        android:layout_height="39dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/panel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.517"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.98" />
+
+    <View
         android:id="@+id/ellipse_1"
         android:layout_width="43dp"
         android:layout_height="40dp"
@@ -41,8 +55,10 @@
         android:text="Магазин"
         app:layout_constraintBottom_toBottomOf="@+id/rectangle_1"
         app:layout_constraintEnd_toEndOf="@+id/rectangle_1"
+        app:layout_constraintHorizontal_bias="0.475"
         app:layout_constraintStart_toStartOf="@+id/rectangle_1"
-        app:layout_constraintTop_toTopOf="@+id/rectangle_1" />
+        app:layout_constraintTop_toTopOf="@+id/rectangle_1"
+        app:layout_constraintVertical_bias="0.6" />
 
     <ImageView
         android:id="@+id/imageView5"
@@ -54,21 +70,174 @@
         app:layout_constraintTop_toTopOf="@+id/ellipse_1"
         app:srcCompat="@drawable/back" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="163dp"
-        android:layout_height="194dp"
-        android:layout_marginStart="115dp"
-        android:layout_marginTop="256dp"
-        android:layout_marginEnd="115dp"
-        android:layout_marginBottom="329dp"
-        android:gravity="center"
-        android:text="Скоро..."
-        android:textColor="#F7C209"
-        android:textSize="24sp"
+    <View
+        android:id="@+id/rectangle_10"
+        android:layout_width="111dp"
+        android:layout_height="107dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/window"
+        android:onClick="onCPU1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.056"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.15" />
+
+    <View
+        android:id="@+id/rectangle_16"
+        android:layout_width="111dp"
+        android:layout_height="107dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/window"
+        android:onClick="onCPU3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.943"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.15" />
+
+    <View
+        android:id="@+id/rectangle_17"
+        android:layout_width="111dp"
+        android:layout_height="107dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/window"
+        android:onClick="onCPU2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rectangle_1" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.15" />
+
+    <ImageView
+        android:id="@+id/imageView13"
+        android:layout_width="58dp"
+        android:layout_height="57dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_10"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_10"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_10"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_10"
+        app:srcCompat="@drawable/core5" />
+
+    <ImageView
+        android:id="@+id/imageView14"
+        android:layout_width="58dp"
+        android:layout_height="57dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_17"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_17"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_17"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_17"
+        app:srcCompat="@drawable/core7" />
+
+    <ImageView
+        android:id="@+id/imageView15"
+        android:layout_width="58dp"
+        android:layout_height="57dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_16"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_16"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_16"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_16"
+        app:srcCompat="@drawable/core9" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="53dp"
+        android:layout_height="22dp"
+        android:gravity="center"
+        android:text="500"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_10"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_10"
+        app:layout_constraintHorizontal_bias="0.448"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_10"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_10"
+        app:layout_constraintVertical_bias="0.976" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1000"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_17"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_17"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_17"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_17"
+        app:layout_constraintVertical_bias="0.965" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1500"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_16"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_16"
+        app:layout_constraintHorizontal_bias="0.531"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_16"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_16"
+        app:layout_constraintVertical_bias="0.965" />
+
+    <ImageView
+        android:id="@+id/imageView16"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_10"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_10"
+        app:layout_constraintHorizontal_bias="0.139"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_10"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_10"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/crysta" />
+
+    <ImageView
+        android:id="@+id/imageView17"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_17"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_17"
+        app:layout_constraintHorizontal_bias="0.162"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_17"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_17"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/crysta" />
+
+    <ImageView
+        android:id="@+id/imageView19"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_15"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_15"
+        app:layout_constraintHorizontal_bias="0.28"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_15"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_15"
+        app:layout_constraintVertical_bias="0.473"
+        app:srcCompat="@drawable/crysta" />
+
+    <ImageView
+        android:id="@+id/imageView18"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_16"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_16"
+        app:layout_constraintHorizontal_bias="0.197"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_16"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_16"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/crysta" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_15"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_15"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_15"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_15" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
