--- a/app/src/main/res/layout/activity_upgrade.xml
+++ b/app/src/main/res/layout/activity_upgrade.xml
@@ -141,6 +141,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/buybutton"
+        android:onClick="onBoost2"
         app:layout_constraintBottom_toBottomOf="@+id/rectangle_4"
         app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
         app:layout_constraintHorizontal_bias="0.946"
@@ -155,6 +156,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/buybutton"
+        android:onClick="onBoost3"
         app:layout_constraintBottom_toBottomOf="@+id/rectangle_5"
         app:layout_constraintEnd_toEndOf="@+id/rectangle_5"
         app:layout_constraintHorizontal_bias="0.946"
@@ -281,6 +283,26 @@
         app:layout_constraintTop_toTopOf="@+id/rectangle_7"
         app:srcCompat="@drawable/money" />
 
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="11dp"
+        android:layout_height="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_6"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_6"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_6"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_6"
+        app:srcCompat="@drawable/money" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_8"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_8"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_8"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_8"
+        app:srcCompat="@drawable/money" />
+
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
@@ -291,6 +313,75 @@
         app:layout_constraintEnd_toEndOf="@+id/rectangle_9"
         app:layout_constraintStart_toStartOf="@+id/rectangle_9"
         app:layout_constraintTop_toTopOf="@+id/rectangle_9" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Драйвера"
+        android:textColor="#FAF9F9"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_13"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_13"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_13"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_13" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Поколение"
+        android:textColor="#F4F1F1"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_14"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_14"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_14"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_14" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="102dp"
+        android:layout_height="19dp"
+        android:gravity="center"
+        android:text="1000"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_4"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
+        app:layout_constraintHorizontal_bias="0.704"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_4"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_4"
+        app:layout_constraintVertical_bias="0.39" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="113dp"
+        android:layout_height="20dp"
+        android:gravity="center"
+        android:text="5000"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_5"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_5"
+        app:layout_constraintHorizontal_bias="0.725"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_5"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_5"
+        app:layout_constraintVertical_bias="0.409" />
+
+    <ImageView
+        android:id="@+id/imageView11"
+        android:layout_width="90dp"
+        android:layout_height="95dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_11"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_11"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_11"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_11"
+        app:srcCompat="@drawable/drivers" />
+
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="90dp"
+        android:layout_height="95dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_12"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_12"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_12"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_12"
+        app:layout_constraintVertical_bias="0.437"
+        app:srcCompat="@drawable/cpus" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
